<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/crime_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@color/black"
                    android:contentDescription="@string/crime_photo_no_image_description"
                    android:cropToPadding="true"
                    android:scaleType="centerInside" />

                <ImageButton
                    android:id="@+id/crime_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/crime_photo_button_description"
                    android:src="@drawable/ic_camera" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crime_title_label"
                    android:textAppearance="?attr/textAppearanceHeadline5" />

                <EditText
                    android:id="@+id/crime_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crime_title_hint"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_details_label"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <Button
            android:id="@+id/crime_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Wed May 11 11:56 EST 2022" />

        <CheckBox
            android:id="@+id/crime_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_solved_label" />

        <Button
            android:id="@+id/crime_suspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_suspect_text" />

        <Button
            android:id="@+id/crime_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_report_text" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="none"
            android:text="@string/crime_previous_images_label"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/previous_crime_photo_1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/black"
                android:contentDescription="@string/crime_photo_no_image_description"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>

            <ImageView
                android:id="@+id/previous_crime_photo_2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="10dp"
                android:background="@color/black"
                android:contentDescription="@string/crime_photo_no_image_description"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></Space>

            <ImageView
                android:id="@+id/previous_crime_photo_3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/black"
                android:contentDescription="@string/crime_photo_no_image_description"
                android:cropToPadding="true"
                android:scaleType="centerInside" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/enable_face_detection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/crime_enable_face_detection"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_faces_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crime_faces_detected"
                android:textAlignment="center"
                android:visibility="invisible" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/enable_contour_detection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/crime_enable_contour_detection"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/enable_mesh_detection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/crime_enable_mesh_detection"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/enable_selfie_segmentation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/crime_enable_selfie_segmentation"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
